--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,6 @@
 @media screen and (min-width: 650px ) {
   .header {
     max-width: 708px;
-    margin-bottom: 38px;
   }
 }
 
@@ -76,7 +75,7 @@
   }
 }
 
-.navigation-menu {
+.header-menu {
   padding: 8px;
   width: 24px;
   height: 23px;
@@ -86,7 +85,7 @@
   cursor: pointer;
 }
 
-.navigation-menu__item {
+.header-menu__item {
   display: block;
   width: 100%;
   height: 3px;
@@ -99,6 +98,21 @@
   gap: 7px;
   width: 100%;
 }
+
+.header__list {
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+
+@media screen and (min-width: 900px ) {
+  .header__list {
+    margin-left: 9px;
+    gap: 15px;
+  }
+}
+
+
 
 .header__film {
   border-radius: 3px;
