--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -71,6 +71,18 @@
   border-bottom: 1px solid #E8E8E8;
   display: block;
   box-sizing: border-box;
+  outline: none;
+}
+
+.login-form__input::placeholder {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.login-form__input:focus {
+  border-bottom: 1px solid #2BE080;
 }
 
 .login-form__input-error {
