--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -2,7 +2,9 @@
   display: flex;
   gap: 6px;
   margin: 212px 17px 0;
+  padding: 0;
   justify-content: space-between;
+  list-style: none;
 }
 
 @media screen and (min-width: 650px ) {
@@ -19,15 +21,13 @@
   }
 }
 
-.navtab__link {
-  text-decoration: none;
+.navtab__item {
   color: #000;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
   font-size: 10px;
   line-height: 16px;
-  margin: 0;
   background-color: #E8E8E8;
   border: 1px solid #E8E8E8;
   border-radius: 6px;
@@ -36,10 +36,14 @@
   padding: 5px 0;
 }
 
+.navtab__link {
+}
+
 @media screen and (min-width: 650px ) {
-  .navtab__link {
+  .navtab__item {
     font-size: 12px;
-    width: 96px;
+    width: 95px;
+    border-radius: 10px;
     padding: 9px 0;
   }
 }
