--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -71,7 +71,21 @@
   border-bottom: 1px solid #E8E8E8;
   display: block;
   box-sizing: border-box;
+  outline: none;
 }
+
+.register-form__input::placeholder {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+}
+
+.register-form__input:focus {
+  border-bottom: 1px solid #2BE080;
+}
+
+
 
 .register-form__input-error {
   align-self: flex-start;
